--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -11,10 +11,10 @@ jobs:
     echo-goodbye:
         runs-on: ubuntu-latest
         steps:
-        - name: Failed Step
+        - name: Successful Step
           run: |
-                echo "Iwill fail"
-                exit 1
+                echo "I will succeed"
+                exit 0
         - name: Say goodbye
           run: echo "Goodbye!"
 
