--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -19,3 +19,10 @@ jobs:
                 echo "this is running an Windows runner."
                 echo "Runner OS : $RUNNER_OS"
   
+    mac-echo:
+        runs-on: macos-latest
+        steps:
+          - name: Show OS
+            run: |
+                echo "this is running an Mac OS runner."
+                echo "Runner OS : $RUNNER_OS"
