--- a/.github/workflows/04-using-actions.yaml
+++ b/.github/workflows/04-using-actions.yaml
@@ -10,6 +10,13 @@ jobs:
               uses: actions/Checkout@v4
             - name: Printing folder
               run: ls
+            - name: Setup Node
+              uses: actions/setup-Node@v3
+              with:
+                node-version:   '20.x'
+            - name: Install dependency
+              run: npm ci
+
         # 0. Checkout the code
         # 1. install a dependency
         # 2. Execute automated test
